# osw25-hackday-omezarr

./: .gitignore  README.md  dask-convert-tiff-to-ome-zarr.ipynb  in-memory-omezarrpy.ipynb  ngio-convert-tiff-to-ome-zarr.ipynb  ome-zarr-ngff-zarr.ipynb  ome-zarr-ngio.ipynb  omezarrpy.ipynb  out-of-memory-bioio.ipynb  out-of-memory-bioio.py  pyproject.toml
