[project]
authors = [{ name = "lorenzo", email = "lorenzo.cerrone@uzh.ch" }]
dependencies = []
name = "osw25-hackday-omezarr"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
