[project]
authors = [{ name = "lorenzo", email = "lorenzo.cerrone@uzh.ch" }]
dependencies = [
    "matplotlib",
    "jupyterlab",
    "numcodecs==0.15.1",
    "numpy==2.3.2",
    "zarr==2.18.7",
    "pydantic-zarr==0.7.0",
    "ome-zarr-models==0.1.10",
    "joblib==1.5.1",
    "tifffile[zarr]<2025.5.21",
    "bioio",
    "bioio-tifffile",
    "napari[all]",
    "napari-ome-zarr",
]
name = "osw25-hackday-omezarr"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
