[project]
authors = [{ name = "lorenzo", email = "lorenzo.cerrone@uzh.ch" }]
dependencies = [
    "matplotlib",
    "jupyterlab",
    "napari[all]",
    "napari-ome-zarr",
]
name = "osw25-hackday-omezarr"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]

dask = [
    "zarr==2.18.7",
    "matplotlib",
    "jupyterlab",
    "numcodecs==0.15.1",
    "numpy==2.3.2",
    "pydantic-zarr==0.7.0",
    "ome-zarr-models==0.1.10",
    "joblib==1.5.1",
    "tifffile[zarr]<2025.5.21",
    "bioio",
    "bioio-tifffile",
    ]
ngio = ["ngio"]
ngff-zarr = ["ngff-zarr", "tifffile", "tensorstore"]
ome-zarr = ["ome-zarr"]
stack-to-chunk = ["stack-to-chunk"]
bioio = ["bioio"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
osw25_hackday_omezarr = { path = ".", editable = true }


[tool.pixi.environments]

ngio = { features = ["ngio"], solve-group = "ngio" }
ngff-zarr = { features = ["ngff-zarr"], solve-group = "ngff-zarr" }
ome-zarr = { features = ["ome-zarr"], solve-group = "ome-zarr" }
stack-to-chunk = { features = ["stack-to-chunk"], solve-group = "stack-to-chunk" }
bioio = { features = ["bioio"], solve-group = "bioio" }
